styling: fix line breaks in event description

--- a/src/components/event-card/eventCard.css
+++ b/src/components/event-card/eventCard.css
@@ -44,6 +44,7 @@
   margin-bottom: 20px;
   color: #282828;
   text-align: justify;
+  white-space: pre-wrap;
 }
 
 .acm-card-details-container .acm-card-details-cta {
